--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,8 @@
 /*Global Styling*/
+html {
+  scroll-behavior: smooth;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -96,6 +100,30 @@ body {
   transition: color 0.3s, background 0.3s;
 }
 
+#hamburger-menu {
+  display: none;
+  cursor: pointer;
+  flex-direction: column;
+  justify-content: space-around;
+  width: 30px;
+  height: 25px;
+  padding: 2px;
+}
+
+#hamburger-menu .bar {
+  display: block;
+  width: 100%;
+  height: 3px;
+  background-color: #fff;
+  border-radius: 2px;
+  transition: all 0.3s ease-in-out;
+}
+
+.navbar-scrolled {
+  padding: 5px 30px;
+  background-color: #111;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
 
 
 /*Hero Section*/
