--- a/responsive.css
+++ b/responsive.css
@@ -102,9 +102,10 @@
     }
 
     .features {
-        display: flex;
+        display: block;
+        justify-content: space-between;
         grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-        gap: 20px;
+        gap: 50px;
     }
 
 
